# libfactplusplus

./: .gitignore  meson.build
headers/: Actor.hpp  AtomicDecomposer.hpp  CGLabel.hpp  CWDArray.hpp  ConceptWithDep.hpp  DLConceptTaxonomy.hpp  DataReasoning.hpp  DataTypeCenter.hpp  DataTypeComparator.hpp  DeletelessAllocator.hpp  DepSet.hpp  ExtendedSyntacticLocalityChecker.hpp  GeneralSyntacticLocalityChecker.hpp  Kernel.hpp  KnowledgeExplorer.hpp  LeveLogger.hpp  LocalityChecker.hpp  Modularity.hpp  OntologyBasedModularizer.hpp  PriorityMatrix.hpp  RAutomaton.hpp  Reasoner.hpp  ReasonerNom.hpp  RoleMaster.hpp  SaveLoadManager.hpp  SemanticLocalityChecker.hpp  SigIndex.hpp  SyntacticLocalityChecker.hpp  TaxGatheringWalker.hpp  Taxonomy.hpp  TaxonomyCreator.hpp  ToDoList.hpp  cpm.hpp  cppi.hpp  dlCompletionGraph.hpp  dlCompletionTree.hpp  dlCompletionTreeArc.hpp  dlDag.hpp  dlTBox.hpp  dlVHash.hpp  (+50 more)
lib/: Actor.cc  AtomicDecomposer.cc  Blocking.cc  BuildDAG.cc  CWDArray.cc  CascadedCache.cc  DLConceptTaxonomy.cc  DataReasoning.cc  DataTypeCenter.cc  ExtendedDataRange.cc  Incremental.cc  Input.cc  Kernel.cc  KnowledgeExplorer.cc  LeveLogger.cc  LocalityChecker.cc  LogicFeature.cc  Preprocess.cc  RAutomaton.cc  Reasoner.cc  ReasonerNom.cc  Relevance.cc  RoleMaster.cc  SaveLoad.cc  SaveLoadManager.cc  SortedReasoning.cc  Tactic.cc  Taxonomy.cc  TaxonomyCreator.cc  configure.cc  dir_util.cc  dlCompletionGraph.cc  dlCompletionTree.cc  dlDag.cc  dlTBox.cc  dlVertex.cc  dltree.cc  dumpInterface.cc  dumpLisp.cc  ifOptions.cc  (+11 more)
