source_files = [
    'TaxonomyCreator.cc',
    'RAutomaton.cc',
    'tDag2Interface.cc',
    'DataReasoning.cc',
    'Incremental.cc',
    'tRole.cc',
    'tExpressionManager.cc',
    'Input.cc',
    'Tactic.cc',
    'SaveLoadManager.cc',
    'dumpLisp.cc',
    'Kernel.cc',
    'CWDArray.cc',
    'Preprocess.cc',
    'SaveLoad.cc',
    'LeveLogger.cc',
    'Relevance.cc',
    'tAxiomSet.cc',
    'tConcept.cc',
    'KnowledgeExplorer.cc',
    'ifOptions.cc',
    'DataTypeCenter.cc',
    'Actor.cc',
    'Blocking.cc',
    'LocalityChecker.cc',
    'DLConceptTaxonomy.cc',
    'dlCompletionTree.cc',
    'ReasonerNom.cc',
    'BuildDAG.cc',
    'Taxonomy.cc',
    'tAxiom.cc',
    'taxVertex.cc',
    'LogicFeature.cc',
    'tDLAxiom.cc',
    'ExtendedDataRange.cc',
    'dlTBox.cc',
    'dlDag.cc',
    'Reasoner.cc',
    'RoleMaster.cc',
    'parseTime.cc',
    'dumpInterface.cc',
    'SortedReasoning.cc',
    'configure.cc',
    'modelCacheIan.cc',
    'dir_util.cc',
    'CascadedCache.cc',
    'dlCompletionGraph.cc',
    'dltree.cc',
    'dlVertex.cc',
    'AtomicDecomposer.cc'
]

libfactplusplus = library(
    'libfact',
    source_files,
    include_directories: inc,
    install: true
)
